--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 .menu {
     background-color: brown;
     text-align: center;
-    font-size: 25px;
     color: red;
-    padding-bottom: 75px;
+    height: 75px;
+    font-size: 20px;
 }
 
 .corps {
@@ -17,4 +17,20 @@
     padding-bottom: 100px;
     text-align: center;
     display: flex;
+}
+
+#contenu
+{
+    display: flex;
+}
+
+#sous-contenuA {
+    background-color: rgb(0, 110, 153);
+    text-align: center;
+    
+}
+
+#sous-contenuB {
+    text-align: center;
+    background-color: rgb(0, 219, 135);
 }
