--- a/style.css
+++ b/style.css
@@ -15,22 +15,28 @@
 .footer {
     background-color: darkkhaki;
     padding-bottom: 100px;
+    position: relative;
     text-align: center;
-    display: flex;
-}
-
-#contenu
-{
-    display: flex;
 }
 
 #sous-contenuA {
     background-color: rgb(0, 110, 153);
     text-align: center;
-    
+    float: left;
+    padding-left: 50px;
+    padding-right: 50px;
 }
 
 #sous-contenuB {
     text-align: center;
     background-color: rgb(0, 219, 135);
+}
+
+td { 
+    border: 1px solid black; 
+    padding: 5px; 
+} 
+
+#cell1 {
+    padding: 10px;
 }
