--- a/style.css
+++ b/style.css
@@ -32,6 +32,10 @@
     background-color: rgb(0, 219, 135);
 }
 
+table { 
+    border: 1px solid white; 
+} 
+
 td { 
     border: 1px solid black; 
     padding: 5px; 
